2009-08-24  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-graphics.patch:
	Removed; applied upstream.
	* Makefile.am: Bump to b70.
	* patches/ecj/icedtea-sbcs.patch,
	* patches/icedtea-testenv.patch:
	Recreated.

2009-08-21  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add variables for source, target and other
	javac settings so they are standardised across
	the build.  Set JAVA_HOME and JDK_HOME to ""
	to avoid build failures.  Set QUIETLY to ""
	to display HotSpot javac invocations. Remove
	duplicate javac invocations now targets depend
	on INITIAL_BOOTSTRAP_LINK_STAMP.
	* javac.in:
	Remove 1.7 setting.  Add ecj_parms so same
	parameters are used for all ecj invocations.
	* patches/ecj/icedtea-hotspot-default.patch:
	Make SA_CLASSPATH contain the whole CLASSPATH
	and use SA_TOOLS_JAR and SA_RT_JAR for the individual
	files.

2009-08-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to b69.

2009-08-07  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(ENABLE_HG): Remove duplicate from
	IcedTea6 merge.

2009-08-07  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump to b68, remove additional -source option.
	* generated/java/nio/channels/AcceptPendingException.java,
	* generated/java/nio/channels/IllegalChannelGroupException.java,
	* generated/java/nio/channels/InterruptedByTimeoutException.java,
	* generated/java/nio/channels/ReadPendingException.java,
	* generated/java/nio/channels/ShutdownChannelGroupException.java,
	* generated/java/nio/channels/WritePendingException.java,
	* generated/sun/nio/fs/UnixConstants.java:
	Add generated files.
	* javac.in: Update to build 1.7 code.
	* patches/ecj/icedtea.patch: Remove patch removing use of 1.6
	source and target options.
	* patches/icedtea-clean-crypto.patch: Regenerated.
	* patches/xrender/icedtea-007.patch: Remove non-ASCII characters.

2009-08-07  Matthias Klose  <doko@ubuntu.com>
